kubernetes/application/okr-application-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okr-application
  labels:
    app: okr-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: okr-application
  template:
    metadata:
      labels:
        app: okr-application
    spec:
      containers:
        - name: okr-application
          image: registry.puzzle.ch/puzzle/okr:Version-0.0.6
          ports:
              - name: http
                containerPort: 8080
