kubernetes/application/okr-application-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: application
  namespace: pitc-okr-prod
  labels:
    argocd.argoproj.io/instance: pitc-okr-prod
spec:
  to:
    kind: Service
    name: okr-application
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  host: okr.ocp.cloudscale.puzzle.ch
  port:
    targetPort: http
